hphp/test/slow/memoize/refargs.php.expectf

Fatal error: <<__Memoize>> cannot be used on functions with inout parameters in %s/test/slow/memoize/refargs.php on line 4
